Fix validation error messages

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
     },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Database=DBHighRiskProviders;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DefaultConnection": "Server=tcp:supplierdiligencedbserver.database.windows.net,1433;Initial Catalog=SupplierDiligenceDB;Persist Security Info=False;User ID=fabrizio;Password=C4t0l1c4!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
