--- a/appsettings.json
+++ b/appsettings.json
@@ -1,13 +1,13 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
+    }
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:supplierdiligencedbserver.database.windows.net,1433;Initial Catalog=SupplierDiligenceDB;Persist Security Info=False;User ID=fabrizio;Password=C4t0l1c4!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "[Database_Server]"
   }
 }
